# go-sql-spanner

./: .gitignore  .gitmodules  .release-please-manifest.json  .repo-metadata.json  CHANGES.md  GEMINI.md  README.md  aborted_transactions_test.go  async_ddl_test.go  auto_dml_batch_test.go  batch.go  checksum_row_iterator.go  checksum_row_iterator_test.go  client_side_statement.go  client_side_statement_test.go  client_side_statements.json  client_side_statements_json.go  conn.go  conn_test.go  conn_with_mockserver_test.go  connection_leak_test.go  connection_properties.go  default_sequence_kind.go  driver.go  driver_non_spanner_test.go  driver_test.go  driver_with_mockserver_test.go  emulator_util.go  emulator_util_test.go  go.mod  go.sum  integration_test.go  merged_row_iterator.go  min_sessions_test.go  multi_statement_rows.go  multi_statement_rows_test.go  partitioned_query.go  partitioned_query_test.go  prefetch_row_iterator.go  query_multiple_test.go  (+21 more)
spannerlib/wrappers/spannerlib-python/: .gitignore  MANIFEST.in  README.md  build-shared-lib.sh  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
spannerlib/wrappers/spannerlib-python/google-cloud-spanner-driver/: README.md  noxfile.py  pyproject.toml
spannerlib/wrappers/spannerlib-python/google-cloud-spanner-driver/google/cloud/spanner_driver/: connection.py  cursor.py  dbapi.py  errors.py  types.py
spannerlib/wrappers/spannerlib-python/google-cloud-spanner-driver/tests/system/: test_cursor.py  test_errors.py  test_executemany.py  test_transaction.py
spannerlib/wrappers/spannerlib-python/google-cloud-spanner-driver/tests/unit/: test_connection.py  test_cursor.py  test_types.py
spannerlib/wrappers/spannerlib-python/google/cloud/spannerlib/: __init__.py  abstract_library_object.py  connection.py  errors.py  library_object.py  pool.py  rows.py
spannerlib/wrappers/spannerlib-python/google/cloud/spannerlib/internal/: __init__.py  _helper.py  errors.py  message.py  message_handler.py  spannerlib.py  types.py
spannerlib/wrappers/spannerlib-python/samples/: README.md  _helper.py  ddl_stats.py  execute_batch.py  quickstart.py  transactions.py  write_mutation.py
spannerlib/wrappers/spannerlib-python/spanner-mockserver/: README.md  noxfile.py  pyproject.toml
spannerlib/wrappers/spannerlib-python/spanner-mockserver/samples/: quickstart.py  requirements.txt  sample_basic_select.py  sample_ddl.py  sample_dml.py
spannerlib/wrappers/spannerlib-python/spanner-mockserver/spannermockserver/: __init__.py  mock_database_admin.py  mock_server_test_base.py  mock_spanner.py
spannerlib/wrappers/spannerlib-python/spanner-python-driver/: README.md  noxfile.py  pyproject.toml
spannerlib/wrappers/spannerlib-python/spanner-python-driver/google/cloud/spanner_python_driver/: __init__.py  connection.py  cursor.py  dbapi.py  errors.py  types.py
spannerlib/wrappers/spannerlib-python/spanner-python-driver/tests/compliance/: _helper.py  dbapi20_compliance_testbase.py  sql_factory.py  test_compliance.py
spannerlib/wrappers/spannerlib-python/spanner-python-driver/tests/system/: test_connection.py  test_cursor.py  test_placeholder.py
spannerlib/wrappers/spannerlib-python/spannerlib-python/: MANIFEST.in  README.md  build-shared-lib.sh  noxfile.py  pyproject.toml  requirements.txt  setup.py
spannerlib/wrappers/spannerlib-python/spannerlib-python/samples/: README.md  requirements.txt
spannerlib/wrappers/spannerlib-python/spannerlib-python/spannerlib_python-0.1.0/: PKG-INFO  pyproject.toml  setup.py
spannerlib/wrappers/spannerlib-python/spannerlib-python/tests/mock/: _helper.py  mock_server_test_base_go_driver.py  test_connection.py  test_pool.py
spannerlib/wrappers/spannerlib-python/spannerlib-python/tests/system/: README.md  _helper.py  _setup_env.py  test_connection.py  test_placeholder.py  test_pool.py  test_rows.py
spannerlib/wrappers/spannerlib-python/spannerlib-python/tests/unit/: test_abstract_library_object.py  test_connection.py  test_placeholder.py  test_pool.py  test_rows.py
spannerlib/wrappers/spannerlib-python/spannermockserver/: README.md  noxfile.py  pyproject.toml
spannerlib/wrappers/spannerlib-python/spannermockserver/spannermockserver/: __init__.py  mock_spanner.py
spannerlib/wrappers/spannerlib-python/spannermockserver/spannermockserver/testbase/: __init__.py  _helpers.py  mock_server_test_base.py
spannerlib/wrappers/spannerlib-python/spannermockserver/tests/system/: test_mock_spanner.py
spannerlib/wrappers/spannerlib-python/tests/system/: __init__.py  _helper.py  test_connection.py  test_placeholder.py  test_pool.py  test_rows.py
spannerlib/wrappers/spannerlib-python/tests/unit/: test_connection.py  test_pool.py  test_rows.py
spannerlib/wrappers/spannerlib-python/tests/unit/internal/: __init__.py  test_errors.py  test_message.py  test_message_handler.py  test_spannerlib.py  test_types.py
spannerlib/wrappers/spannerlib-python/tpcc-benchmark/: README.md  noxfile.py
spannerlib/wrappers/spannerlib-python/tpcc-benchmark/pytpcc/: constants.py  coordinator.py  message.py  tpcc.py  worker.py
spannerlib/wrappers/spannerlib-python/tpcc-benchmark/pytpcc/drivers/: abstractdriver.py  cassandradriver.py  couchdbdriver.py  csvdriver.py  hbasedriver.py  membasedriver.py  mongodbdriver.py  redisdriver.py  scalarisdriver.py  spannerdriver.py  sqlitedriver.py  tokyocabinetdriver.py
spannerlib/wrappers/spannerlib-python/tpcc-benchmark/pytpcc/runtime/: executor.py  loader.py
spannerlib/wrappers/spannerlib-python/tpcc-benchmark/pytpcc/util/: __init__.py  nurand.py  rand.py  results.py  scaleparameters.py
spannerlib/wrappers/spannerlib-python/tpcc-benchmark/tpcc_benchmark/: __init__.py  run_benchmark.py  schema.ddl  spanner_tpcc.py
spannerlib/wrappers/spannerlib-python/tpcc-benchmark/tpcc_benchmark/sql/: drop_indexes_and_tables.ddl
(+761 files in other folders)
