[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spannerlib"
dynamic = ["version"]
authors = [
    { name="Google LLC", email="googleapis-packages@google.com" },
]
description = "A Python wrapper for the Go spannerlib"
readme = "README.md"
license = "Apache-2.0"
license-files = [
    "LICENSE",
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "google-cloud-spanner",
    "importlib_resources",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "nox",
]

[tool.setuptools]
dynamic = {"version" = {attr = "google.cloud.spannerlib.__version__"}}

[tool.setuptools.packages.find]
where = ["."]
include = ["google*"]

[project.urls]
Homepage = "https://github.com/googleapis/go-sql-spanner"
Repository = "https://github.com/googleapis/go-sql-spanner/tree/main/spannerlib/wrappers/spannerlib-python"
